--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, cupiditate!</p>
 
 	<h1>HELLO WORLD</h1>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, cupiditate!</p>
 </body>
 
 </html>
